--- a/index.html
+++ b/index.html
@@ -45,12 +45,7 @@
 
 
     </main>
-    <Script src="./scripts/index.js"></Script>
-    <script>
-
-
-
-    </script>
+    <script src="./scripts/index.js"></script>
 
 </body>
 
